2008-10-26  Sven Neumann  <sven@gimp.org>

	* app/tools/tool_manager.c (tool_manager_get_popup_active): added
	missing return value.

2008-10-26  Michael Natterer  <mitch@gimp.org>

	Add some infrastructure for the on-canvas text editing GSoC
	project:

	* app/tools/gimptoolcontrol.[ch]: add boolean wants_all_key_events
	member and API to set and get it.

	* app/tools/gimptool.[ch]: add GimpTool::get_popup() which returns
	the tool's context menu if it has one, or NULL otherwise.

	* app/tools/tool_manager.[ch]: add tool_manager_get_popup_active()
	wrapper.

	* app/display/gimpdisplayshell-callbacks.c: check if the tool has
	a popup menu and show it instead of the usual right-click menu.

	Also call the tool's key_press() unconditionally if it wants all
	key events, but this code needs more thinking.

2008-10-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c: Increase readability by
	introducing short aliases.

2008-10-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c: For blend modes with
	conditions, fix so that the conditions are per color
	channel. Acheived by introducing a nice little preprocessor macro.

2008-10-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c: Enable the [0..1]
	clamping of the output for Dodge and Burn. Without the clamping
	one gets inconsistent results when blending together identical
	layers but with different opacities. Maybe we should make the
	clamping configurable and introduce a HDR compositing mode or
	something?

2008-10-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c: Implemented Grain
	Extract and Grain Merge. Also corrected the formula for Divide.

	Works the same for 100% opaque layers:
	 o Grain Extract
	 o Grain Merge

2008-10-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c: Implement a bunch of