@@ -1,5 +1,6 @@
 2008-10-26  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptool.c (gimp_tool_get_popup)
 	* app/tools/tool_manager.c (tool_manager_get_popup_active): added
 	missing return value.
 
